<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:padding="5dp"
            android:text="@string/setting"
            android:textSize="24sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_200"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvEditUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/editUser"
            android:textColor="@color/blue"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_corner"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tvUser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/etUser_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="name"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:background="@null"
            />

        <TextView
            android:id="@+id/tvUser_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_address" />

        <EditText
            android:id="@+id/etUser_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="address"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUser_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_dob" />

        <EditText
            android:id="@+id/et_User_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="dob"
            android:textColor="@color/blue"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUser_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_phoneNum" />

        <EditText
            android:id="@+id/etUser_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="phone"
            android:textColor="@color/blue"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_200"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvUser_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_app"
            android:textSize="20sp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_corner"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noti_register" />
        <TextView
            android:id="@+id/tvNotiRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="registed"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <Switch
            android:id="@+id/notiSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_appVersion" />
        <TextView
            android:id="@+id/tvSetting_appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="abc"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_corner"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_news"
           />

        <TextView
            android:id="@+id/tvLocalNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hà Nội"
            android:textColor="@color/blue"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_corner"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_changeSubject" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/background_corner"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_packCancellation" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">


        <Button
            android:id="@+id/btLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textColor="@color/gray"/>
    </LinearLayout>

</LinearLayout>