<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivDigiLife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/img_digilife" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/digi"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:text="@string/download" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCancel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/background_corner"
        android:textColor="@color/gray"
        android:textSize="25sp"
        android:text="@string/cancel" />
</LinearLayout>